# bbskgagent

./: .cursorignore  .env.example  .gitignore  .replit  README.md  pyproject.toml  replit.md  store-brief-README.md
config/: cat.txt.example  categories.yaml  extract_info.sql  rnr_category_map.yaml  settings.example.yaml  team_damdang_map.yaml
data/: README.md
docs/: GIT_SETUP.md  PROGRESS.md  _config.yml  excel-profiles.md  index.md  ocr-parse-samples.json  parsing-quality.md  qa-eval-automation.md
scripts/: analyze_excel_profiles.py  build_knowledge_graph.py  build_llmwiki.py  build_llmwiki_from_parsed.py  hisis_connect.py  mock_daily.py  parse_attachments.py  parse_quality_report.py  prepare_raw.py  qa_loop.ps1  qa_loop.py  regroup_llmwiki.py  remap_attachments.py  run_daily.py  run_qa_eval.py  run_qa_mcp_server.py  sanitize_events.py  serve_parse_viewer.py  serve_viewer_lan.ps1  serve_vllm.sh  setup_viewer_firewall.ps1  test_qa_openai.py  test_vllm.py  verify_data.py
tests/: test_apply_layout.py  test_core.py  test_enrichment.py  test_excel_tables.py  test_excel_vlm_regression.py  test_hisis_cat.py  test_ingest.py  test_ingestion_parse_pdf.py  test_ingestion_parse_pptx.py  test_ingestion_parse_xlsx.py  test_kg_build.py  test_kg_validate.py  test_llmwiki_from_parsed.py  test_llmwiki_from_parsed_gongtong.py  test_llmwiki_grouping.py  test_llmwiki_keywords.py  test_llmwiki_product_routing.py  test_parsed_store.py  test_pptx_pages.py  test_provenance.py  test_qa_bm25.py  test_qa_brands.py  test_qa_eval.py  test_qa_eval_regression.py  test_qa_eval_report.py  (+12 more)
(+150 files in other folders)
