[project]
name = "store-brief"
version = "0.1.0"
description = "Daily per-employee store briefings from internal board posts (vLLM + gemma-4)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    # vLLM client (runs on the NPU/CPU box, talks to Spark over HTTP)
    "openai>=1.30",
    # deterministic attachment parsing
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pyxlsb>=1.0",
    "tabulate>=0.9", # pandas .to_markdown
    "python-pptx>=0.6",
    "pymupdf>=1.24",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pytest>=8.0",
]

[project.optional-dependencies]
# Fuzzy recall (embeddings + index). Optional: deterministic R&R mapping is primary.
retrieve = ["sentence-transformers>=3.0", "faiss-cpu>=1.8"]
# Future verification loop for table extraction.
ocr = ["paddleocr>=2.7", "pytesseract>=0.3", "pillow>=10.0"]
dev = ["pytest>=8.0"]
viewer = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "python-multipart>=0.0.9", "pywin32>=306"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
